--- a/tgui/packages/tgui-panel/styles/goon/chat-light.scss
+++ b/tgui/packages/tgui-panel/styles/goon/chat-light.scss
@@ -356,7 +356,7 @@ em {
   font-weight: bold;
 }
 .maintainerooc {
-  color: #1e4cd6;
+  color: #5F44E5;
   font-weight: bold;
 }
 .contributorooc {
