--- a/tgui/packages/tgui-panel/styles/goon/chat-dark.scss
+++ b/tgui/packages/tgui-panel/styles/goon/chat-dark.scss
@@ -335,6 +335,10 @@ em {
   color: #FF7A4A;
   font-weight: bold;
 }
+.eventminooc{
+   color: #CCAA7A;
+   font-weight: bold;
+}
 .mentorooc{
   color: #329932;
   font-weight: bold;
