--- a/tgui/packages/tgui-panel/styles/goon/chat-light.scss
+++ b/tgui/packages/tgui-panel/styles/goon/chat-light.scss
@@ -351,6 +351,10 @@ em {
   color: #ff5a1e;
   font-weight: bold;
 }
+.eventminooc {
+  color: #A58A63;
+  font-weight: bold;
+}
 .mentorooc {
   color: #008000;
   font-weight: bold;
