--- a/tgui/packages/tgui/styles/main.scss
+++ b/tgui/packages/tgui/styles/main.scss
@@ -46,6 +46,7 @@
 
 // Interfaces
 @include meta.load-css('./interfaces/ListInput.scss');
+@include meta.load-css('./interfaces/Minimap.scss');
 @include meta.load-css('./interfaces/AlertModal.scss');
 @include meta.load-css('./interfaces/CameraConsole.scss');
 @include meta.load-css('./interfaces/Changelog.scss');
